cleanup [platform]: API exposure; minor optimization; deprecated API; typos; formatting
GitOrigin-RevId: 3bcc55331ddc2f68405f4b4ed8bccfe03b79d55c